# linked_list

./: .gitignore  CMakeLists.txt  linked_list_test  main.c
inc/: playlist.h  single_list.h
src/: playlist.c  single_list.c
